--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Research Archive
-description: A collection of academic papers for research and citation.
+description: A collection of academic papers for research and reference.
 url: "https://researcharchive.github.io"
 baseurl: "/"
 plugins:
